added rom about (syaoran12)
Change-Id: I9c3beeafe79fde8600e8e3e2dae0c81905853b55

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1485,6 +1485,8 @@
         
         <activity android:name=".cnd.Navbar" />
 
+        <activity android:name=".cnd.About" />
+
         <activity android:name=".profiles.NFCProfile"
                 android:theme="@android:style/Theme.NoDisplay">
             <intent-filter>
