Lockscreen fixes and features Part 2/2 settings
- change to using integrated instances now
- several fixes for music transport controlls
- BB tablet support
- better peformance optimus lockscreen on hdpi devices
- lockscreen background transparency moved to background customization and works on the fly now
- lockscreen background 0-100% alpha can be activated on colorfill and custom background
- clock moved in settings to widget behaviour. Style could be customized now + hidden feature
- if clock is hidden status1 and owner info will be centered automatically
- owner info can be shown on lockscreen
- optimus and BB lockscreen can now be colored and alpha as you like
- optimus background settings deleted cause of stock background customization ability
- ability to choose one of the custom lockscreen before secure lockscreens
- vibration support for optimus and BB
- whole lockscreen settings are working dynamically now and show just what is possible to customize
- code clean up
- png clean up
- a lot small stuff

PatchSet 2 + 3

- cleanup whitespace errors

PatchSet 4

- commit update

PatchSet 5

- fix FC on custom targets in settings

PatchSet 6

- fix glitch of alpha slider lockscreen background
- some tabs cleanup on old files

PatchSet 7
- also set background for circle screen to a nicer one if default was standard (worked till now only on lockbeforeunlock)
- a bit cosmetic and final one

Change-Id: If4618dab8770afb12f279d45f4759b0b62c42da5

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1477,6 +1477,8 @@
 
         <activity android:name=".cnd.LockscreenInterface" />
 
+        <activity android:name=".cnd.Clock" />
+
         <activity android:name=".cnd.Weather" />
 
         <activity android:name=".cnd.Calendar" />
