Fixes and feature notification drawer 2/2 Settings
- fix custom background image landscape (scales now)
- fix stock background...now not transparent any more on 0%
- moved whole style options in style category @settings
- add support for custom landscape background
- add support for background color fill
- reset of background image not any longer over menu
- changed code to easy port it to 4.2
- code clean up

PatchSet 2

- clean up tabs all files

PatchSet 3+4

- small issue landcape settings entry/summary wasn't visual updated if other portrait was choosen -> fixed

PatchSet 5

- last change for PatchSet 3+4

PatchSet 6

- fix merging conflict

Change-Id: I64e16701f1c46b428f0a2c22ef8a7d0cd8d90062

Conflicts:

	res/values/arrays.xml

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1449,6 +1449,8 @@
 
         <activity android:name=".cnd.PowerWidget" />
 
+        <activity android:name=".cnd.NotificationDrawerStyle" />
+
         <activity android:name=".cnd.QuietHours" />
 
         <activity android:name=".cnd.TabletPowerWidget" />
@@ -1562,7 +1564,7 @@
             </intent-filter>
         </receiver>
 
-		<service android:name=".performance.BootService" />
+        <service android:name=".performance.BootService" />
 
     </application>
 </manifest>
