--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1434,6 +1434,10 @@
             android:theme="@style/CryptKeeperBlankTheme"
         />
 
+        <!-- extra activities start -->
+        <activity android:name=".slim.InterfaceSettings" />
+        <activity android:name=".slim.PowerWidget" />
+
         <!-- Pseudo-activity used to provide an intent-filter entry point to encryption settings -->
         <activity android:name="Settings$CryptKeeperSettingsActivity"
                 android:label="@string/crypt_keeper_encrypt_title">
