(2) Forward port Quiet hours
to slim

PatchSet2
- now correct....sorry

Patchset 3
- rebased
- whitespace cleanup

Change-Id: I5b880e8353cb3171c14d14501877c6b55d384a6d

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1437,6 +1437,7 @@
         <!-- extra activities start -->
         <activity android:name=".slim.InterfaceSettings" />
         <activity android:name=".slim.PowerWidget" />
+        <activity android:name=".slim.QuietHours" />
 
         <!-- Pseudo-activity used to provide an intent-filter entry point to encryption settings -->
         <activity android:name="Settings$CryptKeeperSettingsActivity"
