--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1438,6 +1438,7 @@
         <activity android:name=".slim.InterfaceSettings" />
         <activity android:name=".slim.PowerWidget" />
         <activity android:name=".slim.QuietHours" />
+        <activity android:name=".slim.PowerMenu" />
 
         <!-- Pseudo-activity used to provide an intent-filter entry point to encryption settings -->
         <activity android:name="Settings$CryptKeeperSettingsActivity"
@@ -1445,7 +1446,7 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="android.app.action.START_ENCRYPTION" />
-                <category android:name="android.intent.category.DEFAULT" /> />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
             <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
                 android:value="com.android.settings.CryptKeeperSettings" />
