(6) Forward port About Slim
with updated URLImageViewHelper

Patchset2
- cleanup

Change-Id: Iac4b87db343c70c67cc092b4798f5ecdf8e2ac9b

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1439,6 +1439,7 @@
         <activity android:name=".slim.PowerWidget" />
         <activity android:name=".slim.QuietHours" />
         <activity android:name=".slim.PowerMenu" />
+        <activity android:name=".slim.About" />
 
         <!-- Pseudo-activity used to provide an intent-filter entry point to encryption settings -->
         <activity android:name="Settings$CryptKeeperSettingsActivity"
