--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1440,6 +1440,7 @@
         <activity android:name=".slim.QuietHours" />
         <activity android:name=".slim.PowerMenu" />
         <activity android:name=".slim.About" />
+        <activity android:name=".slim.SoundSettings" />
 
         <!-- Pseudo-activity used to provide an intent-filter entry point to encryption settings -->
         <activity android:name="Settings$CryptKeeperSettingsActivity"
