(13) Forward port LCD Wizard dpi changer
Hint: You need busybox for it

Patchset 2:
- cleanup

Change-Id: I7b22749b2ebb14a4d4fdeb944522097beee55705

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1441,6 +1441,15 @@
         <activity android:name=".slim.PowerMenu" />
         <activity android:name=".slim.About" />
         <activity android:name=".slim.SoundSettings" />
+        <activity android:name=".slim.UserInterface" />
+
+        <activity
+            android:name=".slim.DensityChanger"
+            android:label="@string/lcd_density_wizard" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+            </intent-filter>
+        </activity>
 
         <!-- Pseudo-activity used to provide an intent-filter entry point to encryption settings -->
         <activity android:name="Settings$CryptKeeperSettingsActivity"
