(14) Forward port Display Settings
and a lot overwork on it.
adds:

-Notification light
-Battery Light
-Rotation tweaks
-Volume wake
-Backlight

Patchset 2
- disable Backlight option temporaly cause of huge changes of googles
  PowerManagerServices in frameworks_base

Change-Id: I1394b7f8ea81f59cdad108a901cd696cc9746fd8

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1442,6 +1442,9 @@
         <activity android:name=".slim.About" />
         <activity android:name=".slim.SoundSettings" />
         <activity android:name=".slim.UserInterface" />
+        <activity android:name=".slim.DisplaySettings" />
+        <activity android:name=".slim.notificationlight.NotificationLightSettings" />
+        <activity android:name=".slim.notificationlight.BatteryLightSettings" />
 
         <activity
             android:name=".slim.DensityChanger"
