--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1445,6 +1445,8 @@
         <activity android:name=".slim.DisplaySettings" />
         <activity android:name=".slim.notificationlight.NotificationLightSettings" />
         <activity android:name=".slim.notificationlight.BatteryLightSettings" />
+        <activity android:name=".slim.NotificationDrawerSettings" />
+        <activity android:name=".slim.quicksettings.QuickSettings" />
 
         <activity
             android:name=".slim.DensityChanger"
