Settings: Port notification drawer custom background (1/2)
Change-Id: If7da7fc82942ea74c46cabd48e0ee874f4c20f0a

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1447,6 +1447,7 @@
         <activity android:name=".slim.notificationlight.BatteryLightSettings" />
         <activity android:name=".slim.NotificationDrawerSettings" />
         <activity android:name=".slim.quicksettings.QuickSettings" />
+        <activity android:name=".slim.NotificationDrawerStyle" />
 
         <activity
             android:name=".slim.DensityChanger"
