[Settings] Add clock styles and Clock color picker (2/2)
This commit is a combination of CM AOKP and SLIMROMS work

features:

- Clock and date enable/disable
- Clock and date position
- AM/PM styles multilang support
- Fully customizable date in style and format
- Fully dynamic settings

Change-Id: If4d648d2af182ea7d13f4757433564e1b2ab6a50

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1448,6 +1448,8 @@
         <activity android:name=".slim.NotificationDrawerSettings" />
         <activity android:name=".slim.quicksettings.QuickSettings" />
         <activity android:name=".slim.NotificationDrawerStyle" />
+        <activity android:name=".slim.StatusBar" />
+        <activity android:name=".slim.StatusBarClockStyle" />
 
         <activity
             android:name=".slim.DensityChanger"
