[Settings] Port BatteryBar (1/2)
- Adds Battery bar with following features
- location set
- color
- aligment
- thickness
- animation

- dynamic slim settings

Change-Id: I225afbec1091adea1b8ee79ad04080537e100246

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1450,6 +1450,7 @@
         <activity android:name=".slim.NotificationDrawerStyle" />
         <activity android:name=".slim.StatusBar" />
         <activity android:name=".slim.StatusBarClockStyle" />
+        <activity android:name=".slim.StatusBarBatteryStyle" />
 
         <activity
             android:name=".slim.DensityChanger"
