Settings: Toggle to disable fullscreen keyboard (2/2)
Change-Id: Ie57c11931daf9fae5b584565217699eb9e440fc2

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1453,6 +1453,7 @@
         <activity android:name=".slim.StatusBar" />
         <activity android:name=".slim.StatusBarClockStyle" />
         <activity android:name=".slim.StatusBarBatteryStyle" />
+        <activity android:name=".slim.KeyboardInputSettings" />
 
         <activity
             android:name=".slim.DensityChanger"
